--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,11 @@ categories = ["game-development"]
 interpolation = "0.3"
 
 [dependencies.bevy]
-version = "0.14.0"
+git = "https://github.com/bevyengine/bevy.git"
 default-features = false
 
 [dev-dependencies.bevy]
-version = "0.14.0"
+git = "https://github.com/bevyengine/bevy.git"
 default-features = false
 features = ["bevy_render", "bevy_sprite", "bevy_ui"]
 
